# sensel-morph-linux

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  build.py  pyproject.toml
.claude/: settings.json
.claude/skills/notarai-bootstrap/: SKILL.md
.claude/skills/notarai-reconcile/: SKILL.md
.notarai/: README.md  bootstrap-prompt.md  build.spec.yaml  core.spec.yaml  libsensel.spec.yaml  notarai.spec.json  profiles.spec.yaml  quality.spec.yaml  reconcile-prompt.md  system.spec.yaml  tests.spec.yaml  tools.spec.yaml
.opencode/skills/notarai-bootstrap/: SKILL.md
.opencode/skills/notarai-reconcile/: SKILL.md
lib/: sensel.py
lib/sensel-lib/: Makefile
lib/sensel-lib/src/: sensel.c  sensel_register.c  sensel_serial_linux.c
profiles/: midi_drumpads.yaml  midi_keyboard.yaml  tablet_default.yaml  touchpad_default.yaml
src/sensel_morph/: __init__.py  _libsensel.py  config.py  device.py  frames.py  midi.py  regions.py  registers.py
src/sensel_morph/cli/: morph_config.py  morph_info.py  morph_midi.py  morph_monitor.py  morph_record.py  morph_tablet.py  morph_visualizer.py
tests/: test_frames.py  test_midi.py  test_regions.py  test_registers.py
tests/fixtures/: frames_synthetic.json
tools/: morph_config.py  morph_info.py  morph_midi.py  morph_monitor.py  morph_record.py  morph_tablet.py  morph_visualizer.py
udev/: 99-sensel.rules
