[project]
name = "sensel-morph-linux"
version = "0.1.0"
description = "Linux-native toolchain for the Sensel Morph: tablet and MIDI bridges built on the vendored MIT LibSensel C source."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "evdev>=1.9.3",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "python-rtmidi>=1.5.8",
    "pyyaml>=6.0.3",
]

[project.scripts]
morph-info = "sensel_morph.cli.morph_info:main"
morph-monitor = "sensel_morph.cli.morph_monitor:main"
morph-record = "sensel_morph.cli.morph_record:main"
morph-visualizer = "sensel_morph.cli.morph_visualizer:main"
morph-tablet = "sensel_morph.cli.morph_tablet:main"
morph-midi = "sensel_morph.cli.morph_midi:main"
morph-config = "sensel_morph.cli.morph_config:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sensel_morph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.31",
]

[tool.ruff]
target-version = "py312"
line-length = 80
exclude = ["lib/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PERF", "RUF"]
